--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,7 @@ uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 asyncpg==0.29.0
 databases==0.8.0
-supabase==2.0.3
+supabase==2.3.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
@@ -19,3 +19,5 @@ httpx==0.25.2
 requests==2.31.0
 python-dateutil==2.8.2
 pytz==2023.3
+PyJWT==2.8.1
+bcrypt==4.1.2
